# vif-bookscanner-android

./: .gitignore  NOTICE  README.md  build.gradle  gradle.properties  settings.gradle
bookscanner-app/: LICENSE  build.gradle  proguard-rules.pro
bookscanner-app/src/main/: AndroidManifest.xml
bookscanner-app/src/main/java/de/vif/bookscanner/: MainActivity.kt
bookscanner-app/src/main/java/de/vif/bookscanner/hardware/: SharpnessAnalyzer.kt  UvcCameraBridge.kt  UvcControlPrefs.kt  UvcControlSet.kt
bookscanner-app/src/main/java/de/vif/bookscanner/state/: CameraSelection.kt  ScannerState.kt  ScannerViewModel.kt
bookscanner-app/src/main/java/de/vif/bookscanner/storage/: ScanStorageRepository.kt
bookscanner-app/src/main/java/de/vif/bookscanner/ui/: BookscannerApp.kt  CalibrationScreen.kt  PlaceholderScreens.kt  SettingsScreen.kt  TestCaptureLoopDialog.kt  UvcPreview.kt
bookscanner-app/src/main/java/de/vif/bookscanner/util/: BookscanFileNamer.kt  FocusCurveSearch.kt
bookscanner-app/src/main/res/values/: colors.xml
bookscanner-app/src/test/java/de/vif/bookscanner/hardware/: SharpnessToleranceTest.kt  UvcControlSetTest.kt
bookscanner-app/src/test/java/de/vif/bookscanner/util/: BookscanFileNamerTest.kt  FocusCurveSearchTest.kt
gradle/wrapper/: gradle-wrapper.properties
libuvccamera/: build.gradle
libuvccamera/src/main/: AndroidManifest.xml
libuvccamera/src/main/java/com/serenegiant/usb/: USBMonitor.java
libuvccamera/src/main/jni/: CMakeLists.txt
libuvccamera/src/main/jni/UVCCamera/: UVCButtonCallback.cpp  UVCStatusCallback.cpp
libuvccamera/src/main/jni/UVCCamera/pipeline/: CallbackPipeline.cpp
usbCameraCommon/: build.gradle
usbCameraCommon/src/main/java/com/serenegiant/usbcameracommon/: AbstractUVCCameraHandler.java
usbCameraCommon/src/main/java/com/serenegiant/widget/: UVCCameraTextureView.java
usbCameraTest/: build.gradle
usbCameraTest/src/main/: AndroidManifest.xml
usbCameraTest0/: build.gradle
usbCameraTest0/src/main/: AndroidManifest.xml
usbCameraTest2/: build.gradle
usbCameraTest2/src/main/: AndroidManifest.xml
usbCameraTest3/: build.gradle
usbCameraTest3/src/main/: AndroidManifest.xml
usbCameraTest4/: build.gradle
usbCameraTest4/src/main/: AndroidManifest.xml
usbCameraTest5/: build.gradle
usbCameraTest5/src/main/: AndroidManifest.xml
usbCameraTest6/: build.gradle
usbCameraTest6/src/main/: AndroidManifest.xml
usbCameraTest7/: build.gradle
usbCameraTest7/src/main/: AndroidManifest.xml
usbCameraTest8/: build.gradle
usbCameraTest8/src/main/: AndroidManifest.xml
